[Create] Changement du bouton "Valider" en "Ajouter" et changement d'un lien mort

--- a/templates/admin/post/create.html.twig
+++ b/templates/admin/post/create.html.twig
@@ -15,7 +15,7 @@
                 {{ form_row(formView.publishedAt) }}
                 {{ form_row(formView.categories) }}
                 <div class="form-group">
-                    <button type="submit" id="post_Valider" name="post[Valider]" class="btn btn-info btn-block w-50 mx-auto">Valider</button>
+                    <button type="submit" id="post_Valider" name="post[Valider]" class="btn btn-info btn-block w-50 mx-auto">Ajouter</button>
                 </div>
                 {{ form_widget(formView._token) }} 
             </div>
