--- a/templates/admin/category/create.html.twig
+++ b/templates/admin/category/create.html.twig
@@ -10,7 +10,7 @@
             <div id="category"
                 {{ form_row(formView.name) }}
                  <div class="form-group">
-                    <button type="submit" id="category_Valider" name="category[Valider]" class="btn btn-info btn-block w-50 mx-auto">Valider</button>
+                    <button type="submit" id="category_Valider" name="category[Valider]" class="btn btn-info btn-block w-50 mx-auto">Ajouter</button>
                 </div>
                 {{ form_widget(formView._token) }} 
             </div>
