[Global] Suppression de tous les fichiers inutiles

--- a/templates/user/comment/show.html.twig
+++ b/templates/user/comment/show.html.twig
@@ -14,7 +14,7 @@
             <hr>
             <p>Catégories :
             {% for category in post.categories %}
-                    <a href="http://symfony.iut/category/{{ category.id }}" class="mx-1">{{ category.name }}</a>
+                    <a href="http://symfony.iut/category/{{ category.id }}/show" class="mx-1">{{ category.name }}</a>
             {% endfor %}
             </p>
             <hr>
